# chipmul8

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
chipmul8/: __init__.py  engine.py  gui.py  interpreter.py
chipmul8/emulator/: __init__.py  engine.py
scripts/: bootstrap.sh
src/chipmul8/: __init__.py  __main__.py  cli.py  engine.py  interpreter.py
src/chipmul8/emulator/: engine.py  interpreter.py
test/: test_chipmul8.py
